# Ai-Engineer-Course

./: .gitignore  README.md
week1/day1/: README.md  hello_llm.py
week1/day2/: README.md  sys_temp.py
week1/day3/: README.md  tok.py
week1/day4/: README.md  json_pydantic.py  pyproject.toml  resume_extractor.py
week1/day5/: pyproject.toml  resume_parser.py
week2/day6/: README.md  prompt_eng.py  pyproject.toml
