[project]
name = "day4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "groq>=1.5.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.3.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "unstructured>=0.24.1",
]
